classDiagram
    class Student {
        +str studentId
        +str fullName
        +getStudentId() str
        +getFullName() str
    }

    class Schedule {
        +int dayOfWeek
        +int period
        +str room
    }

    class AttendanceStatus {
        +str PRESENT$
        +str EXCUSED_ABSENCE$
        +str UNEXCUSED_ABSENCE$
        +is_valid(value)$ bool
    }

    class Node {
        +Any data
        +Node next
    }

    class MyLinkedList {
        +Node head
        +Node tail
        -int _size
        +addLast(item)
        +remove(item) bool
        +find(condition) Any
        +traverse(action)
        +size() int
        +get(index) Any
    }

    class AttendanceRecord {
        +Student student
        +str status
        +str classId
        +str date
        +getStatus() str
        +setStatus(status)
    }

    class Session {
        +str date
        +MyLinkedList attendanceList
        +SchoolClass school_class
        +recordAttendance(studentId, status)
        +findAttendance(studentId) AttendanceRecord
        +countPresent() int
    }

    class SchoolClass {
        +str classId
        +str className
        +MyLinkedList studentList
        +MyLinkedList scheduleList
        +MyLinkedList sessionList
        +addStudent(student)
        +getStudentList() MyLinkedList
        +addSchedule(schedule)
        +createSession(date) Session
        +findSession(date) Session
        +calculateAbsenceRate(studentId) float
    }

    class AbsenceReportItem {
        +Student student
        +int totalSessions
        +int absenceCount
        +float absenceRate
    }

    class AttendanceReport {
        +reportAttendanceBySession(session) str
        +getMostAbsentStudents(schoolClass) MyLinkedList
        +getAbsenceWarningList(schoolClass) MyLinkedList
    }

    class FileManager {
        +readFile(path) MyLinkedList
        +writeFile(path, content)
    }

    class AttendanceManager {
        +MyLinkedList classList
        +FileManager fileManager
        +AttendanceReport reportGenerator
        +addClass(schoolClass)
        +getAllClasses() MyLinkedList
        +findClassById(classId) SchoolClass
        +recordAttendance(classId, date, studentId, status)
        +searchByDate(classId, date) Session
        +searchByStudentId(studentId) MyLinkedList
        +reportAttendanceBySession(session) str
        +getMostAbsentStudents(schoolClass) MyLinkedList
        +getAbsenceWarningList(schoolClass) MyLinkedList
        +saveData()
        +loadData()
    }

    class MainProgram {
        +AttendanceManager manager
        +showMenu()
        +handleChoice(choice) bool
        +run()
    }

    %% ─── MyLinkedList internal structure ────────────────────────────────
    MyLinkedList "1" *-- "0..*" Node : stores

    %% ─── Aggregation: classes that contain elements via MyLinkedList ─────
    SchoolClass "1" o-- "0..*" Student : contains
    SchoolClass "1" o-- "0..*" Schedule : contains
    SchoolClass "1" o-- "0..*" Session : contains
    Session "1" o-- "0..*" AttendanceRecord : contains
    AttendanceManager "1" o-- "0..*" SchoolClass : manages

    %% ─── Dependency: classes that return MyLinkedList from methods ───────
    FileManager ..> MyLinkedList : returns
    AttendanceReport ..> MyLinkedList : returns

    %% ─── Association: direct object references stored as attributes ──────
    Session "0..*" --> "1" SchoolClass : belongs to
    AttendanceRecord "0..*" --> "1" Student : records for
    AbsenceReportItem "0..*" --> "1" Student : summarizes
    AttendanceManager "1" --> "1" FileManager : persists via
    AttendanceManager "1" --> "1" AttendanceReport : generates via
    MainProgram "1" --> "1" AttendanceManager : controls

    %% ─── Dependency: uses AttendanceStatus in method logic ───────────────
    AttendanceRecord ..> AttendanceStatus : validates with
    Session ..> AttendanceStatus : uses
    SchoolClass ..> AttendanceStatus : uses
    AttendanceReport ..> AttendanceStatus : uses

